--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="gaya.css" type="text/css" media="all" />
 </head>
 <body>
-    <div style="margin:40px 0;">
+    <div class="ymlcodes-scroooling">
         <div class="background-img">
             <div class="container-sm">
                 <div class="navbar box-navbar flex-box">
